# xmltv2rss-rs

./: Cargo.toml  README.md
src/: error.rs  export.rs  lib.rs  main.rs  xmltv.rs
src/export/: atom.rs  rss.rs
tests/input/: simple.xml
tests/output/: simple-language.xml  simple.xml  timezones.xml
tests/output/atom/: simple-language.xml  simple.xml  timezones.xml
